# ChangeLog for net-print/brother-dcpj925dw
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*brother-dcpj925dw-20131010 (01 Dec 2014)

  01 Dec 2014; Ulrich Müller <ulm@gentoo.org>
  +brother-dcpj925dw-20131010.ebuild, +metadata.xml:
  Initial import. Ebuild contributed by me.
