@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Dec 2014; Ulrich Müller <ulm@gentoo.org>
+  brother-dcpj925dw-20131010.ebuild:
+  Fix some install locations and permission bits.
+
 *brother-dcpj925dw-20131010 (01 Dec 2014)
 
   01 Dec 2014; Ulrich Müller <ulm@gentoo.org>
